<resources>
    <string name="app_name">smart_test</string>
    <string name="hello">Hello</string>
    <string name="welcome">Welcome,</string>
    <string name="dialog_message">Welcome to Alert Dialog</string>
    <string name="dialog_title">Javatpoint Alert Dialog</string>
    <string name="frag1_text">Fragment 1</string>
    <string name="frag2_text">Fragment 2</string>
    <string name="add">Add</string>
    <string name="remove">Remove</string>
    <string name="replace">Replace</string>
    <string name="stack">add to Back Stack</string>
    <string name="my_string_name" translatable="false">Hello world!</string>
    <string name="title_activity_navigation">navigation</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>


    <string name="select_fruit_label">Select Favorite Fruit : </string>
    <string name="fruit_apple">Apple</string>
    <string name="fruit_banana">Banana</string>
    <string name="fruit_watermelon">Watermelon</string>
    <string name="button_show_selection">Show Selection</string>
</resources>